--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,6 @@ import Layout from '../layouts/Layout.astro';
 import { ResultsContainer } from '../components/results';
 ---
 
-<Layout title="IssueFlow - Find Unassigned GitHub Issues">
+<Layout title="IssueVista - Find Unassigned GitHub Issues">
   <ResultsContainer client:load />
 </Layout>
